--- a/front/src/assets/css/style.css
+++ b/front/src/assets/css/style.css
@@ -11,10 +11,38 @@
     /* Para que la imagen se ajuste y no se deforme */
   }
   
-  .titulo1 {
-    top: 50%;
-    transform: translateY(-30%);
+  
+  .carousel-title {
+    font-size: 2rem;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    text-align: center;
   }
+  
+  /* Solo la primera imagen tendrá este estilo */
+  .titulo1 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    position: absolute;
+    top: 50%; /* Centra verticalmente */
+    left: 50%; /* Centra horizontalmente */
+    transform: translate(-50%, -50%); /* Corrige el centrado */
+    text-align: center;
+    width: 100%;
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    z-index: 10;
+  }
+  
+  
+  /* Asegurar que el contenedor padre tenga posición relativa */
+  .carousel-item {
+    position: relative;
+  }
+  
+
+  
+
   
   body {
     background-color: #000000;
@@ -33,6 +61,7 @@
   .botonav {
     background-color: #CCAF54;
     color: black;
+    margin-left: 10px;
   }
   
   .login-container {
