Se agrega css global en el main para estandarizacion de estilos en las vistas, y se agrega header en app

--- a/front/src/assets/css/style.css
+++ b/front/src/assets/css/style.css
@@ -482,4 +482,18 @@
   color: red;
   margin-top: 10px;
   font-weight: bold;
+
+  .header-normal {
+  padding: 10px 0;
+}
+
+.header-home {
+  padding: 40px 0;
+  background-color: #000;
+}
+
+.hero-section {
+  margin-top: 20px;
+}
+
 }
