--- a/front/src/assets/css/style.css
+++ b/front/src/assets/css/style.css
@@ -237,10 +237,11 @@
   }
   
   .icon {
-    width: 50px;
-    height: 50px;
     margin-right: 25px;
     cursor: pointer;
+    width: 2.5rem;
+    height: 2.5rem;
+    object-fit: contain;
   }
   
   .icon:hover {
