--- a/front/src/assets/css/usersInfo.css
+++ b/front/src/assets/css/usersInfo.css
@@ -3,21 +3,26 @@
     flex-direction: column;
     align-items: center;
     margin-top: 50px;
+    max-height: 70vh;
+    overflow-y: auto;
 }
 
 .pedido-box {
     background-color: #333;
     border: 2px solid #CCAF54;
     border-radius: 10px;
+    border-bottom: 1px solid #ccc;
     width: 90%;
     max-width: 900px;
-    padding: 15px;
+    gap: 10px;
+    padding: 10px;
     margin-bottom: 20px;
     text-align: center;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative; /* Importante para posicionamiento absoluto */
+    position: relative;
+    flex-wrap: wrap;
 }
 
 .pedido-box h5 {
@@ -33,18 +38,9 @@
 .icon-container {
     display: flex;
     align-items: center;
-    gap: 15px;
+    flex-wrap: wrap;
+    gap: 10px;
     color: #CCAF54;
-}
-
-.back-button {
-    background-color: #CCAF54;
-    color: #000;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 20px;
 }
 
 .btn-icon {
@@ -53,15 +49,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px; /* Ajusta según sea necesario */
+    padding: 10px; 
     border: none;
     cursor: pointer;
 }
 
 .btn-icon img {
-    width: 24px; /* Ajusta el tamaño del icono */
+    width: 24px; 
     height: 24px;
-    object-fit: contain; /* Mantiene la proporción */
+    object-fit: contain; 
 }
 
 
@@ -72,31 +68,49 @@
 
 .icon-usuario-container {
     position: relative;
-    left: 20px; /* Ajusta este valor para mover el icono a la derecha */
-    border: 2px solid #CCAF54; /* Añade borde del color deseado */
+    left: 20px; 
+    border: 2px solid #CCAF54;
     border-radius: 20%;
     padding: 7px;
 }
 
 .icon-usuario {
-
     width: 100%;
     padding: 7px;
-}
-.form-check-input:checked {
-    background-color: #28a745; /* Color verde al activarse */
-    border-color: #28a745;    /* Bordes verdes */
-    display: flex; 
 }
 
 .form-check-input {
     background-color: #ccc; /* Color gris al estar desactivado */
     border-color: #ccc;    /* Bordes grises */
+    width: 50px;
+    height: 25px;
 }
 
 .form-check-input:focus {
-    box-shadow: 0 0 0 0.25rem rgba(40, 167, 69, 0.25); /* Sombra verde cuando se enfoca */
+  outline: none;
+  box-shadow: none;
 }
+
+.form-check-input:active {
+  appearance: none;
+  box-shadow: none;
+}
+
+.form-check-input.active-switch {
+  background-color: #28a745 !important;
+  border-color: #28a745 !important;
+}
+
+.form-check-input.blocked-switch {
+  background-color: #dc3545 !important;
+  border-color: #dc3545 !important;
+}
+
+.form-check-input.disabled-switch {
+  background-color: #6c757d !important;
+  border-color: #6c757d !important;
+}
+
 .swal2-popup {
     background-color: #000 !important;
     border: 2px solid #CCAF54;
@@ -113,9 +127,11 @@
 }
 .btn-agregar{
     background-color: #CCAF54;
+    color: #000;
 }
 .btn-agregar:hover{
-    background-color: #9c8337;
+    background-color: #000000;
+    color: #fff;
 }
 .search-filter-container {
     display: flex;
