--- a/front/src/assets/css/products.css
+++ b/front/src/assets/css/products.css
@@ -15,9 +15,9 @@
 }
 
 .btn-botonavinactive {
-  background-color: #d4af37;
-  color: black;
-  border: 1px solid;
+  background-color: #ccaf54;
+  color: rgb(0, 0, 0);
+  border: 1px solid #d4af37;
   padding: 0.5rem 1.2rem;
   border-radius: 10px;
   font-weight: bold;
@@ -26,14 +26,14 @@
 }
 
 .btn-botonavinactive:hover {
-  background-color: #b28f2f;
+  background-color: #2d2d2d;
+  color: rgb(255, 255, 255);
+  border: 1px solid #d4af37;
 }
 
 .btn-agregar {
-  background-color: #d4af37;
-  color: black;
-  border: none;
-  padding: 1rem 1.2rem;
+  background-color: #ccaf54;
+  color: rgb(0, 0, 0);
   border-radius: 10px;
   font-weight: bold;
   cursor: pointer;
@@ -41,7 +41,9 @@
 }
 
 .btn-agregar:hover {
-  background-color: #b28f2f;
+  background-color: #2d2d2d;
+  color: rgb(255, 255, 255);
+  border: 1px solid #d4af37;
 }
 
 .btn-vercarrito {
@@ -178,9 +180,9 @@ input:checked+.slider:before {
 
 
 .btn-view {
-  background-color: #3498db; 
-  color: white;
-  border: none;
+  background-color: #2d2d2d;
+  color: #d4af37;
+  border: 1px solid #d4af37;
   padding: 0.4rem 0.8rem;
   border-radius: 10px;
   font-weight: bold;
@@ -189,7 +191,7 @@ input:checked+.slider:before {
 }
 
 .btn-view:hover {
-  background-color: #2980b9;
+  background-color: #000000;
 }
 
 .btn-edit,
@@ -216,45 +218,6 @@ input:checked+.slider:before {
 .btn-delete:hover {
   background-color: #c9302c;
 }
-
-.btn-cart,
-.btn-buy {
-  background-color: #2d2d2d;
-  color: #d4af37;
-  border: 1px solid #d4af37;
-  padding: 0.4rem 0.8rem;
-  border-radius: 10px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: 0.3s ease;
-}
-
-.btn-cart:hover,
-.btn-buy:hover {
-  background-color: #d4af37;
-  color: black;
-}
-
-.btn-regresar {
-  margin-top: 1rem;
-  text-align: center;
-}
-
-.back-button {
-  background-color: #d4af37;
-  color: black;
-  border: none;
-  padding: 0.8rem 1.5rem;
-  border-radius: 10px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: 0.3s ease;
-}
-
-.back-button:hover {
-  background-color: #b28f2f;
-}
-
 
 .cart-add-box {
   position: sticky;
@@ -466,19 +429,12 @@ input:checked+.slider:before {
   }
 
   .quantity-control-strip-item {
-    flex-direction: row;
     gap: 0.8rem;
     width: auto;
   }
 
   .btn-remove-pending-strip {
     margin-left: 0.5rem;
-  }
-
-  .btn-success {
-    width: auto;
-    max-width: none;
-    margin-top: 0;
   }
 }
 
@@ -529,7 +485,6 @@ input:checked+.slider:before {
     margin-top: 0.5rem;
   }
 }
-
 
 .modal-overlay {
   position: fixed;
