--- a/front/src/assets/css/register.css
+++ b/front/src/assets/css/register.css
@@ -74,29 +74,13 @@ h3 {
     font-weight: bold;
     font-size: 16px;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .button-registrar:hover {
     background-color: #b38b2e00;
 }
 
-footer {
-    margin-top: auto;
-    background-color: #22222200;
-    padding: 10px 0;
-}
-
-.back-button {
-    padding: 7px 15px;
-    background-color: #ffffff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    color: #000;
-    font-weight: bold;
-    font-size: 14px;
-    margin-top: 15px;
-}
 .swal2-popup {
     background-color: #000 !important;
     border: 2px solid #CCAF54;
