--- a/front/src/assets/css/users/editUsers.css
+++ b/front/src/assets/css/users/editUsers.css
@@ -10,12 +10,12 @@
     margin-top: 50px;
 }
 
-/* h3 {
+h3 {
     color: #CCAF54;
     margin-bottom: 25px;
     font-size: 20px;
     text-align: left;
-} */
+}
 
 .recover-form label {
     display: block;
