Creacion de archivos css para crear y editar productos, separacion de estilos de la vista

--- a/front/src/assets/css/products.css
+++ b/front/src/assets/css/products.css
@@ -2,7 +2,7 @@
   transform: scale(0.9);
   transform-origin: top center;
   width: 100%;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 .d-flex {
