--- a/Documentacion/Trimestre_2/PROTOTIPO HTML Y CSS/PROYECTO_MYSTICALCUT_PROTOTIPO/public/assets/css/Administrador/agregarProducto.css
+++ b/Documentacion/Trimestre_2/PROTOTIPO HTML Y CSS/PROYECTO_MYSTICALCUT_PROTOTIPO/public/assets/css/Administrador/agregarProducto.css
@@ -1,18 +1,14 @@
-/*Iconos de usuario y del carrito */
-
-/* Estilos para los nuevos iconos */
 .icon {
-    width: 80px; /* Ajusta el tamaño según sea necesario */
+    width: 80px;
     height: 80px;
     margin-right: 25px;
     cursor: pointer;
 }
 
 .icon:hover {
-    opacity: 0.8; /* Opcional: agregue un efecto de desplazamiento */
+    opacity: 0.8;
 }
 
-/* Ajustar el menú desplegable para que coincida con los nuevos íconos */
 .dropdown-menu {
     background-color: #111;
     border: none;
