--- a/front/src/assets/css/style.css
+++ b/front/src/assets/css/style.css
@@ -64,7 +64,7 @@
     margin-left: 10px;
   }
 
-  .botonav-citas:hover {
+  /* .botonav-citas:hover {
     background-color: #0051ff;
     color: black;
     margin-left: 10px;
@@ -74,7 +74,7 @@
     background-color: #3d71e2;
     color: black;
     margin-left: 10px;
-  }
+  } */
   
   .login-container {
     background-color: #111;
