--- a/front/src/assets/css/auth/forgotPassword.css
+++ b/front/src/assets/css/auth/forgotPassword.css
@@ -1,4 +1,4 @@
-.container {
+.container-password {
   max-width: 800px;
   margin: auto;
   text-align: center;
@@ -12,11 +12,14 @@
 
 input,
 button {
+  background-color: #333;
+  color: #ffffff;
   width: 70%;
   margin: 10px 0;
   padding: 10px;
   text-align: center;
 }
+
 input:hover {
   background-color: #333;
   color: #ffffff;
@@ -42,26 +45,27 @@ input:hover {
   color: #CCAF54;
 }
 
-  .btn-regresar {
-    width: 100px;
-    padding: 7px 15px;
-    background-color: #000000;
-    border: 1px solid #D4AF37;
-    border-radius: 5px;
-    cursor: pointer;
-    color: #CCAF54;
-    margin-top: 15px;
-    margin: 0 auto;
-    text-align: center;
-    display: block;
-  }
-  
-  .btn-regresar:hover {
-    background-color: #CCAF54;
-    color: #000000;
-    border: 1px solid #D4AF37;
-  }
-  form {
+.btn-regresar {
+  width: 100px;
+  padding: 7px 15px;
+  background-color: #000000;
+  border: 1px solid #D4AF37;
+  border-radius: 5px;
+  cursor: pointer;
+  color: #CCAF54;
+  margin-top: 15px;
+  margin: 0 auto;
+  text-align: center;
+  display: block;
+}
+
+.btn-regresar:hover {
+  background-color: #CCAF54;
+  color: #000000;
+  border: 1px solid #D4AF37;
+}
+
+form {
   display: flex;
   flex-direction: column;
   align-items: center;
